[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = {version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[[bin]]
name = "blog_os"
test = true
bench = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

# 集成测试配置
# harness = true: 使用自定义测试框架（test_runner），需要在代码中定义 test_main
# harness = false: 禁用测试框架，test_main 必须手动调用或由 bootloader 处理

[[test]]
name = "basic_boot"
harness = true

[[test]]
name = "heap_allocation"
harness = true

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
